// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberChange components basic render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      false,
    ]
  }
>
  <TYText
    align={null}
    color="#000"
    size={16}
    text={0}
    type={null}
    weight={null}
  />
</View>
`;

exports[`NumberChange components useUnitText render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "opacity": 0.5,
      },
    ]
  }
>
  <Component
    value="60"
    valueColor="#000"
    valueSize={16}
  />
</View>
`;
